# SensorFusionPublic

./: .gitconfig  .gitignore  .gitignore.save  .gtk-bookmarks  .viminfo  CHANGELOG.md  Check.ID.C.sh  Check.ID.Pi.sh  Custom.01.C.sh  Custom.01.Pi.sh  Custom.02.C.sh  Custom.02.Pi.sh  Custom.03.C.sh  Custom.03.Pi.sh  Custom.04.C.sh  Custom.04.Pi.sh  DRS Sensor Fusion Client Setup  Demo.90.C.sh  Demo.90.Pi.sh  LICENSE.md  Model01.Deer.C.sh  Model01.Deer.Pi.sh  Model02.Head.C.sh  Model02.Head.Pi.sh  Model03.Eyes.C.sh  Model03.Eyes.Pi.sh  Model04.Tree.C.sh  Model04.Tree.Pi.sh  PoseEstimation.C.sh  README.md  Thermal01.C.sh  Thermal01.Pi.sh  Thermal01.seekware.sh  checkid_installation.sh  drew.txt  install_Demo.90.sh  killall.sh  labelImg-master_Setup.md  launch.sh  launch_noTPU.sh  (+8 more)
.pki/nssdb/: key4.db
.vim/: .netrwhist
Demo90/: TFLite_detection_webcam_api.py  config.py  main.py  models.py  requirements.txt  sf.db
Demo90/routes/: __init__.py  routes.py
Demo90/sfui/: __init__.py  widgets.py
Demo90/static/css/: login.css  register.css  sidenav.css  style.css
Demo90/static/js/: data.js  globals.js  index.js  register.js  sidenav.js  utilities.js
Demo90/templates/: base.html  index.html  login.html  register.html  reset.html
Templates/: index.html
checkid/: TFLite_detection_webcam.bak.py  TFLite_detection_webcam.py  TFLite_detection_webcam_api.py
checkid/Sample_TFLite_model/: labelmap.txt
dev/: DRS Client Setup
flask-api/: requirements.txt  sf-dbapp.py
project-posenet-master/: pose_camera.py
seek_to_csv/: SeekMosaicModuleGuide.docx
seek_to_csv/ir/: irCamera_SeekMosaic.py
seek_to_csv/ir/mosaic320/: simpleVideoCamera.py
seek_to_csv/seekware-server/: CMakeLists.txt  Makefile
seek_to_csv/seekware-server/src/: seekware-server.c
thermal01/: simpleVideoCamera.py
thermal01/Sample_TFLite_model/: labelmap.txt
thermal01/seek_to_csv/ir/: simpleVideoCamera.py
thermal01/seek_to_csv/ir/mosaic320/: irCamera_SeekMosaic.py
